# omniscan

./: .gitignore  Cargo.toml  EvalNotebook.ipynb  README.md
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: main.rs
