[package]
name = "omniscan"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0.1", features = ["ws", "rustls"]}
tokio = { version = "1", features = ["full", "time"] }
regex = "1.5.6"
lazy_static = "1.4.0"
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1"}
walkdir = "2.3.2"
clap = { version = "4.0.11", features = ["derive"] }
chrono = "0.4.26"
num_cpus = "1.15.0"